# pisces-standard-flowsheet-format

./: .gitignore  404.html  AGENTS.md  LICENSE  README.md  examples_for_export.py  export.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  validate.py
.github/workflows/: deploy.yml
biosteam_export/: index.html
contributions/: index.html
docs/: biosteam_export.md  contributions.md  extending.md  full_schema.md  index.md  schema_reference.md  superpro_export.md
docs/schema/: schema_v_0.0.2.json
examples/: biosteam_export.py
exported_flowsheets/bioindustrial_park/: corn_3HP_acrylic.json  cornstover_3HP_acrylic.json  dextrose_3HP_acrylic.json  sugarcane_3HP_acrylic.json
extending/: index.html
full_schema/: index.html
graph_learning/: README.md  __init__.py  config.yaml  demo_graph_generation.py  example_workflow.ipynb  graph_generation_deep_dive.ipynb  main_pipeline.py  quick_demo.py  requirements.txt
graph_learning/docs/: AGENT_DEVELOPMENT_SUMMARY.md  AGENT_IMPLEMENTATION_ROADMAP.md  BATCHING_FIXES_SUMMARY.md  BUGFIX_METADATA_BATCHING.md  EDGE_GENERATION_DIAGNOSTIC.md  FLOWSHEET_DESIGN_AGENT_STRATEGY.md  GNN_PROJECT_README.md  GRAPH_GENERATION_GUIDE.md  GRAPH_GENERATION_UPDATE.md  NOTEBOOK_FIXES.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  (+5 more)
pisces_sff/: __init__.py  _export.py  _validate.py  base.py
pisces_sff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
schema/: schema_v_0.0.1.json  schema_v_0.0.2.json  schema_v_0.0.3.json
schema_reference/: index.html
search/: search_index.json
(+58 files in other folders)
